Fix spacing on mobile

--- a/main.css
+++ b/main.css
@@ -28,6 +28,10 @@ a {
   text-decoration: none;
 }
 
+p {
+  margin-bottom: 24px;
+}
+
 .content {
   max-width: 320px;
   margin: 140px 70px;
@@ -41,10 +45,6 @@ a {
 
 .subtitle {
   font-size: 24px;
-}
-
-p {
-  margin-bottom: 24px;
 }
 
 .stroke {
@@ -73,4 +73,12 @@ p {
   position: absolute;
   left: 0;
   z-index: -1;
+}
+
+@media (max-width: 480px) {
+  .content {
+    margin: 60px 0 0 0;
+    max-width: 100%;
+    padding: 0 35px;
+  }
 }
